[package]
name = "rpg-compiler"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jomy10/rpg-lang"
authors = ["Jonas Everaert <info@jonaseveraert.be>"]
description = "A compiler library for the rpg esoteric programming language"
license = "MIT"

[dependencies]
simple_colors = "1"
regex = "1.5.4"
lazy_static = "1.4.0"
spinners = "2"
spinner = "0.5.0"